html meta fixed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 import logo from '../../public/images/logo.png';
 ---
 
-<Layout title='Welcome to Astro.'>
+<Layout title='FRTGear.com - Tu distribuidor de paintball favorito'>
   <section class='relative background h-screen w-screen overflow-y-hidden'>
     <!-- Fondo con imagen -->
     <div
