--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,9 @@ import '../styles/global.css';
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
+    <meta property='og:locale' content='es_ES' />
+    <meta property='og:locale:alternate' content='pt_PT' />
+    <meta property='og:image' content='/images/shareimage.jpg' />
     <title>{title}</title>
   </head>
   <body>
