--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import logo from '../../public/images/logo.png';
 ---
 
 <Layout title='FRTGear.com - Tu distribuidor de paintball favorito'>
-  <section class='relative background h-screen w-screen overflow-y-hidden'>
+  <section class='relative background h-screen w-screen'>
     <!-- Fondo con imagen -->
     <div
       class='absolute inset-0 bg-cover bg-center bg-fixed filter blur-[5px] z-[-10]'
@@ -29,7 +29,7 @@ import logo from '../../public/images/logo.png';
       <div class='absolute top-24 bg-white w-[400px] h-[40px] -z-10'></div>
 
       <!-- Tarjeta de contacto -->
-      <section class='mt-[100px] md:w-[40%] ml-auto'>
+      <section class='mt-[100px] md:mt-[280px] md:w-[40%] ml-auto'>
         <div class='card-contact'>
           <div
             class='font-Aero text-white bg-[#FF4D00] text-3xl pr-[150px] p-2'
