--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,12 +24,19 @@ import logo from '../../public/images/logo.png';
       </div>
 
       <!-- Barras blancas -->
-      <div class='absolute top-0 bg-white w-[500px] h-[40px] -z-10'></div>
-      <div class='absolute top-12 bg-white w-[450px] h-[40px] -z-10'></div>
-      <div class='absolute top-24 bg-white w-[400px] h-[40px] -z-10'></div>
+      <div class='absolute top-0 bg-white w-full max-w-[500px] h-[40px] -z-10'>
+      </div>
+      <div
+        class='absolute top-12 bg-white w-[90%] max-w-[450px] h-[40px] -z-10'
+      >
+      </div>
+      <div
+        class='absolute top-24 bg-white w-[80%] max-w-[400px] h-[40px] -z-10'
+      >
+      </div>
 
       <!-- Tarjeta de contacto -->
-      <section class='mt-[100px] md:mt-[280px] md:w-[40%] ml-auto'>
+      <section class='mt-20 lg:mt-[20vw] md:w-[40%] ml-auto'>
         <div class='card-contact'>
           <div
             class='font-Aero text-white bg-[#FF4D00] text-3xl pr-[150px] p-2'
