--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import logo from '../../public/images/logo.png';
       </div>
 
       <!-- Tarjeta de contacto -->
-      <section class='mt-20 lg:mt-[20vw] md:w-[40%] ml-auto'>
+      <section class='my-[74px] lg:mt-[20vw] md:w-[40%] ml-auto'>
         <div class='card-contact'>
           <div
             class='font-Aero text-white bg-[#FF4D00] text-3xl pr-[150px] p-2'
@@ -94,30 +94,32 @@ import logo from '../../public/images/logo.png';
       </section>
 
       <!-- Marquesina -->
-      <div class='absolute bottom-0 bg-white w-full'>
-        <div class='marquee-container'>
-          <div class='marquee-content'>
-            <span class='text font-Aero text-7xl uppercase'>
-              - Web en construccion -
-            </span>
-            <span class='text font-Aero text-7xl uppercase'>
-              - Site em desenvolvimento -
-            </span>
-            <span class='text font-Aero text-7xl uppercase'>
-              - Web en construccion -
-            </span>
-            <span class='text font-Aero text-7xl uppercase'>
-              - Site em desenvolvimento -
-            </span>
-            <span class='text font-Aero text-7xl uppercase'>
-              - Web en construccion -
-            </span>
-            <span class='text font-Aero text-7xl uppercase'>
-              - Site em desenvolvimento -
-            </span>
+      <footer>
+        <div class='bg-white w-full'>
+          <div class='marquee-container'>
+            <div class='marquee-content'>
+              <span class='text font-Aero text-7xl uppercase'>
+                - Web en construccion -
+              </span>
+              <span class='text font-Aero text-7xl uppercase'>
+                - Site em desenvolvimento -
+              </span>
+              <span class='text font-Aero text-7xl uppercase'>
+                - Web en construccion -
+              </span>
+              <span class='text font-Aero text-7xl uppercase'>
+                - Site em desenvolvimento -
+              </span>
+              <span class='text font-Aero text-7xl uppercase'>
+                - Web en construccion -
+              </span>
+              <span class='text font-Aero text-7xl uppercase'>
+                - Site em desenvolvimento -
+              </span>
+            </div>
           </div>
         </div>
-      </div>
+      </footer>
     </div>
   </section>
 
