--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ interface Props {
 const { title } = Astro.props;
 import '@fontsource/ubuntu';
 import '../styles/global.css';
+import SpeedInsights from '@vercel/speed-insights/astro';
 ---
 
 <!doctype html>
@@ -22,6 +23,7 @@ import '../styles/global.css';
     <title>{title}</title>
   </head>
   <body>
+    <SpeedInsights />
     <slot />
   </body>
 </html>
