--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,13 +13,17 @@ import SpeedInsights from '@vercel/speed-insights/astro';
 <html lang='es'>
   <head>
     <meta charset='UTF-8' />
-    <meta name='description' content='Astro description' />
+    <meta
+      name='description'
+      content='Tu nueva tienda de Paintball en España y Portugal. The other sports are just sports. Paintball for life!'
+    />
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
     <meta property='og:locale' content='es_ES' />
     <meta property='og:locale:alternate' content='pt_PT' />
     <meta property='og:image' content='/images/shareimage.jpg' />
+
     <title>{title}</title>
   </head>
   <body>
